<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_width="100.0dip"
            android:layout_height="100.0dip"
            android:src="@drawable/ic_no_network"
            android:scaleType="centerCrop" />
        <TextView
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:textSize="@dimen/text_content_title_size"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_oops" />
        <TextView
            android:textSize="@dimen/text_content_sub_title_size"
            android:gravity="center"
            android:id="@id/failed_message"
            android:paddingLeft="30.0dip"
            android:paddingRight="30.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:text="@string/failed_text" />
        <Button
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:id="@id/failed_retry"
            android:background="@drawable/bg_button_background"
            android:layout_width="wrap_content"
            android:layout_height="40.0dip"
            android:layout_marginBottom="50.0dip"
            android:text="@string/option_retry" />
    </LinearLayout>
</RelativeLayout>