<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="?actionBarSize"
        android:paddingStart="10.0dip"
        android:paddingEnd="10.0dip">
        <View
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0" />
        <ImageButton
            android:id="@id/btn_close"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_width="40.0dip"
            android:layout_height="40.0dip"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/img_content_description" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="24.0dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40.0dip"
                android:layout_height="40.0dip"
                android:src="@mipmap/ic_launcher"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Image.Rounded" />
            <TextView
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="22.0sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redirect_title"
                android:layout_marginStart="10.0dip" />
        </LinearLayout>
        <TextView
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:textSize="16.0sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/redirect_message" />
        <com.google.android.material.button.MaterialButton
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:id="@id/btn_redirect"
            android:layout_width="fill_parent"
            android:layout_height="54.0dip"
            android:layout_marginTop="10.0dip"
            android:text="@string/redirect_button"
            style="@style/MaterialButtonStyle" />
    </LinearLayout>
</LinearLayout>