<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@id/bottom_sheet"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="60.0dip"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:background="?android:selectableItemBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="48.0dip"
                android:layout_height="48.0dip"
                android:src="@mipmap/ic_launcher"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Image.Rounded" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20.0dip">
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="18.0sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="@dimen/text_sub_title_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_dialog_exit" />
            </LinearLayout>
        </LinearLayout>
        <com.solodroid.ads.sdk.ui.MediumNativeAdView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip" />
        <LinearLayout
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:weightSum="5.0">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="1"
                    android:rating="1.0"
                    style="?android:ratingBarStyleIndicator" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="1"
                    android:rating="1.0"
                    style="?android:ratingBarStyleIndicator" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="1"
                    android:rating="1.0"
                    style="?android:ratingBarStyleIndicator" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="1"
                    android:rating="1.0"
                    style="?android:ratingBarStyleIndicator" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="1"
                    android:rating="0.5"
                    style="?android:ratingBarStyleIndicator" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:weightSum="3.0">
            <com.google.android.material.button.MaterialButton
                android:layout_gravity="center"
                android:id="@id/btn_rate"
                android:layout_width="0.0dip"
                android:layout_height="50.0dip"
                android:text="@string/btn_rate_us"
                android:layout_weight="1.0"
                style="@style/MaterialButtonStyle" />
            <com.google.android.material.button.MaterialButton
                android:layout_gravity="center"
                android:id="@id/btn_share"
                android:layout_width="0.0dip"
                android:layout_height="50.0dip"
                android:text="@string/btn_share"
                android:layout_weight="1.0"
                android:layout_marginStart="16.0dip"
                android:layout_marginEnd="16.0dip"
                style="@style/MaterialButtonStyleBorder" />
            <com.google.android.material.button.MaterialButton
                android:layout_gravity="center"
                android:id="@id/btn_exit"
                android:layout_width="0.0dip"
                android:layout_height="50.0dip"
                android:text="@string/btn_quit"
                android:layout_weight="1.0"
                style="@style/MaterialButtonStyleBorder" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>